# gStripe

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: basic_test.bedpe
src/gstripe/: datasources.py  genomic_tools.py  graphs.py  gstripe.py  ranges.py  stats.py  task.py  utils.py
